--- a/src/window.ui
+++ b/src/window.ui
@@ -33,7 +33,7 @@
         </child>
         <child>
           <object class="GtkButton" id="resume_button">
-            <property name="label" translatable="yes">Resume for next piece</property>
+            <property name="label" translatable="yes">Resume schedule</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="receives-default">True</property>
@@ -47,6 +47,20 @@
             <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel" id="status_label">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="valign">center</property>
+            <property name="margin-start">10</property>
+            <property name="margin-end">10</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
           </packing>
         </child>
       </object>
