--- a/src/window.ui
+++ b/src/window.ui
@@ -13,6 +13,7 @@
         <child>
           <object class="GtkButton" id="pause_button">
             <property name="label" translatable="yes">Pause</property>
+            <property name="height-request">300</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="receives-default">True</property>
@@ -34,6 +35,7 @@
         <child>
           <object class="GtkButton" id="resume_button">
             <property name="label" translatable="yes">Resume schedule</property>
+            <property name="height-request">300</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="receives-default">True</property>
@@ -42,6 +44,9 @@
             <property name="margin-end">10</property>
             <property name="margin-top">10</property>
             <property name="margin-bottom">10</property>
+            <style>
+              <class name="suggested-action"/>
+            </style>
           </object>
           <packing>
             <property name="expand">False</property>
